5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1795_1595.log
== TEST (2019-05-30 16:07:11) 
-- CODE:
from numpy import*

n = array(float(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x[i]):
		notas = notas + 1
		i = i + 1
	prin(notas)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:08:14) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x[i]):
		notas = notas + 1
		i = i + 1
	prin(notas)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:09:29) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
		i = i + 1
	prin(notas)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:09:44) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
		i = i + 1
	print(notas)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:10:15) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
		i = i + 1
	print(notas)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:10:15) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
		i = i + 1
	print(notas)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:11:02) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
print(notas)


-- EXECUTION TIME:
1.70426
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:11:04) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
print(notas)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:12:00) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
print(round(notas,2)


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:12:07) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
print(round(notas,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:12:27) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
print(round(notas,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:15:16) 
-- CODE:
from numpy import*

n = array(eval(float(input("vetor de notas:"))))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
print(round(notas,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:15:46) 
-- CODE:
from numpy import*

n = array(float(eval(input("vetor de notas:"))))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
print(round(notas,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:31) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
	print(round(notas,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:49) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
	print(round(notas,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:54) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
print(round(notas,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:58) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
print(round(notas,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:26) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
	print(round(notas,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:56) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
	i = i + 1
	print(round(i,2))


-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:04) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
	i = i + 1
print(round(i,2))


-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:08) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		i = i + 1
	print(round(i,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:21) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))

i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		i = i + 1
	print(round(i,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:44) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))

i = 0 
notas = 0
while(i < size(n)):
	if(n[i] != 0):
		i = i + 1
	print(round(i,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:51) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))

i = 0 
notas = 0
while(i < size(n)):
	if(n[i] != 0):
		i = i + 1
	print(round(i,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:19:05) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
	print(round(notas,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:19:14) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
	print(round(notas,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:19:18) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
	print(round(notas,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:54) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
while(i < size(n)):
	if(n[i] == x):
		notas = notas + 1
	i = i + 1
print(round(notas,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:45) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:16) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:00) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(n)
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:13) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

while(i < size(n)):
	if(n[i] == x):
		notas = notas - x
	i = i + 1
print(round(notas,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:49) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

while(i < size(n)):
	if(n[i] == x):
		notas = notas 
	i = i + 1
print(round(i,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:13) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:42) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:43) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:26:44) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- EXECUTION TIME:
0.392777
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    print(mean(round(n,2)))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:19) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:19) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:40) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:59) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:03) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:19) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:28:21) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- EXECUTION TIME:
0.699878
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    print(mean(round(n,2)))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:27) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:28) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:28) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:39) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:28:40) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- EXECUTION TIME:
0.379845
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    print(mean(round(n,2)))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:47) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:59) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:59) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:29:00) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- EXECUTION TIME:
0.303542
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1595/main.py", line 8, in <module>
    print(mean(round(n,2)))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:04) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:19) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:19) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:19) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:28) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:40) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0

print(mean(round(n,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:55) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
z = mean(round(n,2))
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:52) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
z = round(mean(n),2)
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:04) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
i = 0 
notas = 0
z = round(mean(n),2)
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:08) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

z = round(mean(n),2)
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:33:31) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

z = round(mean(n),2)
print(z)


-- EXECUTION TIME:
0.400138
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
2.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:34:14) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

b = round(mean(z),2)
print(z)


-- EXECUTION TIME:
0.432285
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
[1 0 3]
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
[2 1 0 4 2]
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
[0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:17) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

b = round(mean(z),2)
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:35:19) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

z = round(mean(z),2)
print(z)


-- EXECUTION TIME:
0.484911
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:20) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

z = round(mean(z),2)
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:08) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

b = round(mean(z),2)
print(b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:25) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

b = round(mean(z),2)
print(b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:19) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

b = round(mean(z),2)
print(b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:31) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

b = round(mean(z),2)
print(b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:38:55) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

b = round(mean(z),2)
print(b)


-- EXECUTION TIME:
0.606843
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:59) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

b = round(mean(z),2)
print(b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:21) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

b = round(mean(a),2)
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:58) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

b = round(mean(a),2)
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:40:13) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

b = round(mean(a),2)
print(b)


-- EXECUTION TIME:
0.450721
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
1.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:13) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

b = round(mean(a),2)
print(b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:40:14) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

b = round(mean(a),2)
print(b)


-- EXECUTION TIME:
0.861032
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:18) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:59) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
a = n - x
z = a

print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:44:03) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
w = n + (-x)
a = w
z = round(mean(a),2)
print(z)


-- EXECUTION TIME:
0.54702
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:44:04) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
w = n + (-x)
a = w
z = round(mean(a),2)
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:44:04) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
w = n + (-x)
a = w
z = round(mean(a),2)
print(z)


-- EXECUTION TIME:
0.343856
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
vetor de notas:0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:00) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = (min(n))
i = 0

w = n + (-x)
a = w
z = round(mean(a),2)
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:47:00) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = (min(n))
i = 0

w = n + (-x)
a = w
z = round(mean(a),2)
print(z)


-- EXECUTION TIME:
0.45629
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:47:32) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = (min(n))
i = 0

w = n + (-x)
a = w
z = round(mean(n),2) - x
print(z)


-- EXECUTION TIME:
0.350377
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.7999999999999998
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:33) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = (min(n))
i = 0

w = n + (-x)
a = w
z = round(mean(n),2) - x
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:40) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = (min(n))

z = round(mean(n),2) 
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:23) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = (min(n))
z = round(mean(n),3) 
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:17) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = (min(n))
w = sum(n) - size(n-[4])

z = round(mean(w),2) 
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:28) 
-- CODE:
from numpy import*

n = array(eval(input("vetor de notas:")))
x = min(n)
w = n -x
a = w
z = round(mean(a),2)
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
